spacer_term_graph: an egraph of terms
Used to determine and factor out equalities

--- a/src/muz/spacer/CMakeLists.txt
+++ b/src/muz/spacer/CMakeLists.txt
@@ -20,6 +20,7 @@ z3_add_component(spacer
   spacer_antiunify.cpp
   spacer_mev_array.cpp
   spacer_qe_project.cpp
+  spacer_term_graph.cpp
   COMPONENT_DEPENDENCIES
   arith_tactics
   core_tactics
