--- a/src/muz/spacer/CMakeLists.txt
+++ b/src/muz/spacer/CMakeLists.txt
@@ -21,6 +21,8 @@ z3_add_component(spacer
   spacer_mev_array.cpp
   spacer_qe_project.cpp
   spacer_term_graph.cpp
+  spacer_sem_matcher.cpp
+  spacer_quant_generalizer.cpp
   COMPONENT_DEPENDENCIES
   arith_tactics
   core_tactics
