Refactor iuc_proof as a separate class
This also adds DOT printing support to interpolating proofs
(color for different parts)

iuc_proof is a proof used for IUC computation

--- a/src/muz/spacer/CMakeLists.txt
+++ b/src/muz/spacer/CMakeLists.txt
@@ -25,6 +25,7 @@ z3_add_component(spacer
   spacer_quant_generalizer.cpp
   spacer_callback.cpp
   spacer_json.cpp
+  spacer_iuc_proof.cpp
   COMPONENT_DEPENDENCIES
   arith_tactics
   core_tactics
