Rename itp_solver into iuc_solver
IUC stands for Interpolanted UNSAT Core

--- a/src/muz/spacer/CMakeLists.txt
+++ b/src/muz/spacer/CMakeLists.txt
@@ -11,7 +11,7 @@ z3_add_component(spacer
   spacer_smt_context_manager.cpp
   spacer_sym_mux.cpp
   spacer_util.cpp
-  spacer_itp_solver.cpp
+  spacer_iuc_solver.cpp
   spacer_virtual_solver.cpp
   spacer_legacy_mbp.cpp
   spacer_unsat_core_learner.cpp
